# iptvrs

./: .gitignore  Cargo.toml  Justfile  README.md  settings.template.toml
.github/workflows/: rust.yml
migrations/: 1_create_db.sql
src/: db.rs  entry.rs  lib.rs  main.rs  settings.rs
src/cli/: hydrate.rs  list.rs  mod.rs  play.rs  search.rs
