[package]
name = "iptvrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml = "0"
reqwest = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0"
config = {version="0", default-features=false, features=["toml"]}
clap = {version = "4", features = ["derive"]}
sled = "0"
dirs = "5"
