[package]
name = "iptvrs"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/vihu/iptvrs"
authors = ["Rahul Garg"]
description = "Play IPTV playlists using preferred local player"
license = "MIT"
readme = "README.md"
keywords = ["iptv", "player", "m3u", "m3u8"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml = "0"
reqwest = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0"
config = {version="0", default-features=false, features=["toml"]}
clap = {version = "4", features = ["derive"]}
dirs = "5"
sqlx = { version = "0", features = [ "runtime-tokio-rustls", "sqlite", "macros"] }
tracing = "0"
tracing-subscriber = { version = "0", default-features=false, features = ["env-filter", "registry", "fmt"] }
tracing-logfmt = "0"

[dev-dependencies]
tempfile = "3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.2"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
